# OTUS_Prof_DZ_07

./: CMakeLists.txt  README.md  bulk.cpp  commands.cpp
.github/workflows/: Comands.yml  Commands.yml  bulk.yml  commands.yml
headers/: Block.h  ComandDistr.h
test/: bulk_gtest.cpp  commands_gtest.cpp
